--- a/05_navigation.html
+++ b/05_navigation.html
@@ -125,8 +125,7 @@
       </section>
       <!-- goBack() -->
       <section>
-        <h3>goBack()</h3>
-
+        <h3>Go Back</h3>
         <table class="simple jsoncommand">
           <tr>
             <th>HTTP Method</th>
@@ -139,9 +138,17 @@
             <td></td>
           </tr>
         </table>
-        <p>The "goBack" command is equivalent to a user hitting the "back" button in their browser, and MUST behave as a <a href="http://www.w3.org/TR/html/browsers.html#traverse-the-history-by-a-delta">traversal of the browser history by a delta of -1</a> (as defined in [[!html51]]). If a user calls "<code>goBack</code>" when there are no further pages in the browser's history stack, then this call MUST be a no-op.
-        </p>
-        <p> If the page takes too long <a href="#timeouts">as specified by the timeouts</a> a <code><a href="#status-timeout">timeout</a></code> error MUST be raised. If the <a href='http://www.w3.org/TR/html5/browsers.html#top-level-browsing-context'>top level browsing context</a> currently receiving commands is no longer open a <code><a href="#no-such-window">no such window</a></code> error MUST be raised.
+        <p>The <dfn>goBack</dfn> command causes the browser to traverse one step backward in thejoint session history of the current browsing context.
+        <p>The <a>remote end steps</a> for the <a>goBack</a> command are:</p>
+        <ol>
+          <li><p>If the <a>current top level browsing context</a> is <a>no longer open</a>, return an error with code <a>no such window</a>.</p></li>
+          <li><p><a href="https://html.spec.whatwg.org/#traverse-the-history-by-a-delta">Traverse the history by a delta</a> -1 for the <a>current browsing context</a>.</p></li>
+          <li><p>If the task queued by that algorithm aborted before <a href="https://html.spec.whatwg.org/#traverse-the-history">traversing the history</a>, return <a>success</a> with data null.
+          <li><p>Otherwise, wait until the <a href="https://html.spec.whatwg.org/#current-entry">current entry</a> in the session history has changed, or for the <a>current session</a>'s <a>load timeout</a> milliseconds to pass, whichever occurs sooner.</p></li>
+          <!-- TODO: this doesn't actually wait for the page to load if traversing the session history kicks off a navigation -->
+          <li><p>If the previous step completed by the <a>load timeout</a> being reached, and the browser is not currently displaying an alert<!-- perhaps? Not sure if this is what the spec is trying to say -->, return an <a>error</a> with code <a>timeout</a>.</p></li>
+          <li><p>Return <a>success</a> with data <var>null</var></p></li>
+          </ol>
       </section>
       <section>
         <h3>goForward()</h3>
