Fix capitalisation of Get command

--- a/05_navigation.html
+++ b/05_navigation.html
@@ -42,7 +42,7 @@
   </tr>
 </table>
 
-<p>The <dfn>get</dfn> command is used
+<p>The <dfn>Get</dfn> command is used
  to cause the browser to navigate to a new location.
  From a user's point of view,
  it is as if they have entered the "url" into the URL bar.</p>
@@ -56,7 +56,7 @@
  <pre class=highlight>{"url": "http://example.com/"}</pre>
 </aside>
 
-<p>The <a>remote end steps</a> for the <a>get</a> command are:
+<p>The <a>remote end steps</a> for the <a>Get</a> command are:
 
 <ol>
  <li><p>If the <a>current top level browsing context</a> is <a>no longer open</a>,
