Write some better algorithms for frame manipulation bits

--- a/05_navigation.html
+++ b/05_navigation.html
@@ -59,7 +59,7 @@
 <p>The <a>remote end steps</a> for the <a>Get</a> command are:
 
 <ol>
- <li><p>If the <a>current top level browsing context</a> is <a>no longer open</a>,
+ <li><p>If the <a>current top-level browsing context</a> is <a>no longer open</a>,
   return an error with code <a>no such window</a>.
 
  <li><p>Let <var>url</var> be the result of <a>getting a property</a> named "url"
