--- a/07_switching.html
+++ b/07_switching.html
@@ -1,54 +1,170 @@
-<section>
-
   <section>
-    <h2>Switching Frames</h2>
+    <h2>Resizing and Positioning Windows</h2>
+
     <section>
-      <h3>switchToFrame()</h3>
-        <table class="simple jsoncommand">
-          <tr>
-            <th>HTTP Method</th>
-            <th>Path Template</th>
-            <th>Notes</th>
-          </tr>
-          <tr>
-            <td>POST</td>
-            <td id='post-frame'>/session/{sessionId}/frame</td>
-            <td></td>
-          </tr>
-        </table>
-        <dl class='parameters'>
-          <dt><a>WebElement</a> or unsigned short? id</dt>
-          <dd>The identifier used for a frame.</dd>
-        </dl>
-        <p>The "switchToFrame" command is used to select which frame which is a child of the<a href='http://www.w3.org/TR/html5/browsers.html#top-level-browsing-context'>top level browsing context</a> MUST be used as the context for handling future commands. All frame switching is taken from the current context from which commands are currently being handled. The "<code>id</code>" parameter can be an unsigned short or a <a>WebElement</a>. WebDriver implementations MUST determine which frame to select using the following algorithm:
+      <h3>Introduction</h3>
+      <p>WebDriver provides commands for interacting with the
+      operating system window containing the current browsing
+      context. Because different operating systems, window managers
+      provide different abilities, not all of the commands in this
+      section can be supported by all remote ends. Where a command is
+      not supported, an <a>unsupported operation</a> error is
+      returned.</p>
+    </section>
+    <section>
 
-        <ol>
-          <li>If the "id" is a unsigned short the current context is set to the equivalent of the JS expression "window.frames[id]" where "id" is the number and "window" is the Document window represented by the current context.</li>
-          <li>If the "id" is null, the current context is set to the <a href='#default-content'>default content</a>.</li>
-          <li>If the "id" represents a <a>WebElement</a>, and the corresponding <a href='http://w3c.github.io/dom/#element'>Document <code>element</code></a> represents a FRAME or an IFRAME, and the <a>WebElement</a> is part of the current context, the "window" property of that <a href='http://w3c.github.io/dom/#element'>Document <code>element</code></a> becomes the current context.</li>
-        </ol>
-
-        <p>In all cases if no match is made a "<code><a href="#status-no-such-frame">no such frame</a></code>" status code MUST be returned.</p>
-
-        <p>If the indicated frame exists, frame switching MUST succeed even if doing so would violate the normal security constraints in place within the Javascript sandbox.</p>
-      </section>
       <section>
-      <h3>switchToParentFrame()</h3>
+      <h3>Get Window Size</h3>
+        <p>
+          <table class="simple jsoncommand">
+            <tr>
+              <th>HTTP Method</th>
+              <th>Path Template</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>GET</td>
+              <td id='get-window_handle-size'>/session/{sessionId}/window/size</td>
+              <td></td>
+            </tr>
+          </table>
+        <p>The Get Window Size command returns the size of the
+        operating system window corresponding to the <a>current
+        top-level browsing context</a>.</p>
 
-        <table class="simple jsoncommand">
-          <tr>
-            <th>HTTP Method</th>
-            <th>Path Template</th>
-            <th>Notes</th>
-          </tr>
-          <tr>
-            <td>POST</td>
-            <td id='post-frame-parent'>/session/{sessionId}/frame/parent</td>
-            <td></td>
-          </tr>
-        </table>
-        <p>The "switchToParentFrame" command MUST set the context of future commands to the <code>window.parent</code>. If the current context is the [[!html51]]'s <a href="http://www.w3.org/TR/html5/browsers.html#top-level-browsing-context">top level browsing context</a>, the context remains unchanged.</p>
+        <p>The <a>remote end steps</a> for <dfn>Get Window Size</dfn>
+        are:</p>
+        <ol>
+          <!-- Can this whole operation be unsupported? -->
+          <li><p>If the <a>current top level browsing context</a> is <a>no longer open</a>,
+              return an error with code <a>no such window</a>.</li>
+          <li><p>Let <var>width</var> be the width in CSS pixels of the OS
+              window containing the <a>current top-level browsing
+              context</a>, including any browser chrome and
+              externally drawn window decorations.</li>
+          <li><p>Let <var>height</var> be the height in CSS pixels of
+          the OS window containing the <a>current top-level browsing
+          context</a>, including any browser chrome and any externally
+          drawn window decorations.</li>
+
+          <li><p>Let <var>data</var> be a new JSON Object.</li>
+
+          <li><p>Set the property <code>width</code> on <var>data</var>
+              to <var>width</var>.</li>
+
+          <li><p>Set the property <code>height</code> on <var>data</var>
+              to <var>height</var>.</li>
+
+          <li><p>Return <a>success</a> with data <var>data</var>
+        </ol>
       </section>
+
+      <!-- setWindowSize() -->
+      <h3>setWindowSize()</h3>
+        <p>
+          <table class="simple jsoncommand">
+            <tr>
+              <th>HTTP Method</th>
+              <th>Path Template</th>
+              <th>Notes</th>
+            </tr>
+            <tr>
+              <td>POST</td>
+              <td id='post-window_handle-size'>/session/{sessionId}/window/size</td>
+              <td></td>
+            </tr>
+          </table>
+        <p>
+        Resizes the OS window currently receiving commands to have the <code>height</code> and <code>width</code> passed in as parameters.
+        <p>If a request is made to resize a OS window to a size which cannot be performed (e.g. the browser has a minimum, or fixed OS window size, or the operating system does not support resizing windows at all as is the case in many phone OSs), an <code><a href="#status-unsupported-operation">unsupported operation</a></code> status code MUST be returned.</p>
+        <p>After <code>setWindowSize</code>, the browser window MUST NOT be in the maximised state.</p>
+        <dl class='parameters'>
+          <dt>unsigned double width</dt>
+          <dd>The "width" value refer to the javascript <code>window.outerwidth</code> property. If the User Agent does not support this property, it represents the width of the whole OS window including window chrome and window resizing borders/handles.</li></dd>
+          <dt>unsigned double height</dt>
+          <dd>The "height" value refer to the javascript <code>window.outerheight</code> property. If the User Agent does not support this property, it represents the width of the whole OS window including window chrome and window resizing borders/handles.</li></dd>
+
+      </section>
+
+
+      <section>
+      <h3>Maximize Window</h3>
+      <table class="simple jsoncommand">
+        <tr>
+          <th>HTTP Method</th>
+          <th>Path Template</th>
+          <th>Notes</th>
+        </tr>
+        <tr>
+          <td>POST</td>
+          <td id='get-window_handle-maximize'>/session/{sessionId}/window/maximize</td>
+          <td></td>
+        </tr>
+      </table>
+      <p>The <a>Maximize Window</a> command invokes the window
+      manager-specific "maximize" operation, if any, on the window
+      containing the <a>current top-level browsing context</a>. This
+      typically increases the window to the maximum available size
+      without going full-screen.</p>
+      <p>The <a>remote end steps</a> for <dfn>Maximise Window</dfn>
+        are:</p>
+      <ol>
+          <li><p>If the <a>current top level browsing context</a>
+              is <a>no longer open</a>, return an <a>error</a> with
+              code <a>no such window</a>.</li>
+          <li><p>If the <a>remote end</a> does not support the
+               <a>Maximize Window</a> command for the <a>current top
+              level browsing context</a> for any reason, return an
+              error with code <a>unsupported operation</a>.</li>
+          <li><p>Run the implementation-specific steps to complete the
+          <a>Maximize</a> command,
+          which should have the effect of maximizing the dimensions of
+          the window containing the <a>current active top-level
+          browsing context</a> without making the window full-screen, if the
+          window manager distinguishes between maximized and
+          full-screen windows.</li>
+          <li><p>Return <a>success</a> with data null</li>
+      </ol>
+      </section>
+
+      <section>
+      <h3>Fullscreen Window</h3>
+      <table class="simple jsoncommand">
+        <tr>
+          <th>HTTP Method</th>
+          <th>Path Template</th>
+          <th>Notes</th>
+        </tr>
+        <tr>
+          <td>POST</td>
+          <td id='get-window_handle-maximize'>/session/{sessionId}/window/maximize</td>
+          <td></td>
+        </tr>
+      </table>
+      <p>The <a>Fullscreen Window</a> command invokes the window
+      manager-specific "full screen" operation, if any, on the window
+      containing the <a>current top-level browsing context</a>. This
+      typically increases the window to the size of the physical
+      display and can hide browser UI elements such as toolbars.</p>
+      <p>The <a>remote end steps</a> for <dfn>Fullscreen Window</dfn>
+        are:</p>
+      <ol>
+          <li><p>If the <a>current top level browsing context</a>
+              is <a>no longer open</a>, return an <a>error</a> with
+              code <a>no such window</a>.</li>
+          <li><p>If the <a>remote end</a> does not support the
+               <a>Fullscreen Window</a> command for the <a>current top
+              level browsing context</a> for any reason, return an
+              error with code <a>unsupported operation</a>.</li>
+          <li><p>Run the implementation-specific <a>Fullscreen
+          Window</a> steps, which should have the effect of making the
+          dimensions of the window containing the <a>current top-level
+          browsing context</a> as close as possible to the dimensions
+          of the display containing the window dimensions, and may
+          hide browser-provided chrome such as toolbars.</li>
+          <li><p>Return <a>success</a> with data null</li>
+      </ol>
+
     </section>
   </section>
 </section>
