Add some trivial styling to improve legibility.

--- a/webdriver-spec.html
+++ b/webdriver-spec.html
@@ -33,6 +33,18 @@ code a:visited, code a:link {
 
      #respec-ui { top: 80px !important }
     </style>
+    <style>
+      /* Make spec narrower */
+      body { max-width: 60em; margin: 0 auto !important; line-height: 1.5; }
+
+      /* Bump up code size */
+      code { font-size: 16px !important; }
+      pre, pre code { font-size: 14px !important; }
+
+      a {text-decoration:none}
+      a[href]:link {border-bottom:none; color: #005a9c}
+      a[href]:visited {border-bottom:none}
+    </style>
 
     <!--
       === NOTA BENE ===
